fix spacing issue on project in mobile

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,6 +2,9 @@
     margin-top:130px;
 }
 
-.projects hr{
-    height:2px;
+
+@media screen and (max-width:510px){
+    .projects{
+        margin-top:70px;
+    }
 }
